Refactoring, Comments, OpenCSV writing update.